Improved the demo which now uses a news article, summarizes it, extracts the tickers symbols, and sends a formatted email with the summary and the latest stock prices.

--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_HVlo2U1RjNHJQVK8XWs7zFgZ 1\n"
+      "Added assistant:  asst_gaGpkHX8M9YrFRUkhosqvpMH 4\n"
      ]
     }
    ],
@@ -158,18 +158,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 2: Create a Thread\n",
     "thread = client.beta.threads.create()\n",
     "\n",
+    "article = \"\"\"Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.\n",
+    "\n",
+    "The stock market rally had a strong rebound this past week after the major indexes and many leading stocks retreated to start 2024 but soon found support at key levels. A large number of stocks flashed buy signals, including a powerful breakout from Nvidia (NVDA).\n",
+    "\n",
+    "It's been a good time to add exposure.\n",
+    "\n",
+    "Nvidia stock is now extended, but fellow AI leader Microsoft (MSFT) is just above a buy point after solid weekly gains, on the cusp of surpassing the market cap of fellow Dow giant Apple (AAPL). Novo Nordisk (NVO) remains in a buy zone.\n",
+    "\n",
+    "MercadoLibre (MELI) and Tradeweb Markets (TW) flashed entries intraday.\n",
+    "\n",
+    "On the downside, Tesla (TSLA) had an ugly week, extending a recent sell-off and breaking key support levels amid a flurry of headlines.\n",
+    "\n",
+    "Nvidia and NVO stock are on IBD Leaderboard. MELI stock, Nvidia and Microsoft are on SwingTrader. MSFT stock is on IBD Long-Term Leaders. Nvidia stock, MercadoLibre, Novo Nordisk and Microsoft are on the IBD 50. Microsoft, Nvidia and MercadoLibre stock are on the IBD Big Cap 20.\"\"\"\n",
+    "\n",
     "# Step 3: Add a Message to a Thread\n",
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    content=\"Can you please provide me the latest stock prices for Microsoft and NVIDIA? Please send an email to: alemor@microsoft.com, vsantana@microsoft.com, andres.padilla@microsoft.com, andredewes@microsoft.com with the results.\"\n",
+    "    content=\"For the following article: \\n\\nArticle: \"\"\"\"\"\"\" + article + \"\\n\"\"\"\"\"\"\" +\n",
+    "    \"\\n\\nEmail a summary of the article in simple HTML format and include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.\" +\n",
+    "    \"Use only the provide text.\"\n",
     ")\n",
     "\n",
     "# Step 4: Run the Assistant\n",
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -202,30 +218,44 @@
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_kiAnfllx8jIfLHPD2EEipW4A', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_d80J5ANlpMhVAG7K848Fwqbp', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_SSfQiU7RML5MBHuu2RXafWcB', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_E76KIWXsxjh3nxXT34SUS7Zh', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_bOTmiuaQ0MKgT5UPThdPefgg', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_bVJ7HvPQLmOO0OZ2vhvPqJqg', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_db4EJeQoDwg7rEnc1MGyFa1n', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_R1211nqvf9uuZzXny9l4cBGN', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_S3qxMR92wKdaeOg2O51CJaP6', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
+      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_UxJ9bxVanWSv8OQpXfz5gnrh', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com, vsantana@microsoft.com, andres.padilla@microsoft.com, andredewes@microsoft.com\",\\n  \"content\": \"Dear Microsoft team,\\\\n\\\\nPlease find the latest closing stock prices for:\\\\nMicrosoft (MSFT): $388.47\\\\nNVIDIA (NVDA): $547.10\\\\n\\\\nBest regards,\\\\nPersonal Securities Trading Assistant\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_7XPK5HO4ND1GqVnfG71T6ehh', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n<title>Market Summary</title>\\\\n<style>\\\\nbody { font-family: Arial, sans-serif; }\\\\nh2 { color: #4F8A10; }\\\\nul { list-style-type: none; }\\\\nli { margin: 5px 0; }\\\\n</style>\\\\n</head>\\\\n<body>\\\\n<h2>Stock Market Summary</h2>\\\\n<p>The stock market rally experienced a strong rebound this past week. Major indexes and many leading stocks recovered from early 2024 losses, finding support at key levels. Numerous stocks presented buy signals, with Nvidia (NVDA) showing a significant breakout.</p>\\\\n<p>While Nvidia stock is currently extended, Microsoft (MSFT) remains just above a buy point after a week of strong gains, challenging Apple\\'s (AAPL) market cap. Novo Nordisk (NVO) is still inside a buy zone, whereas MercadoLibre (MELI) and Tradeweb Markets (TW) indicated intraday entry points.</p>\\\\n<p>Conversely, Tesla (TSLA) had a poor performance, continuing its recent downward trajectory and breaching crucial supports amidst a series of notable news.</p>\\\\n<p>Nvidia and NVO are featured on IBD Leaderboard, with MELI stock, Nvidia, and Microsoft on SwingTrader. Moreover, MSFT is part of the IBD Long-Term Leaders, and along with Nvidia, MercadoLibre, Novo Nordisk, and Microsoft, is also included in the IBD 50. Microsoft, Nvidia, and MercadoLibre form part of the IBD Big Cap 20 list.</p>\\\\n<h3>Closing Prices:</h3>\\\\n<ul>\\\\n<li>Nvidia (NVDA): $547.10</li>\\\\n<li>Microsoft (MSFT): $388.47</li>\\\\n<li>Apple (AAPL): $185.92</li>\\\\n<li>Novo Nordisk (NVO): $107.16</li>\\\\n<li>MercadoLibre (MELI): $1658.58</li>\\\\n<li>Tradeweb Markets (TW): $95.91</li>\\\\n<li>Tesla (TSLA): $218.89</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
-      "Email sent to: alemor@microsoft.com, vsantana@microsoft.com, andres.padilla@microsoft.com, andredewes@microsoft.com\n",
+      "Email sent to: alemor@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Assistant: The latest stock prices have been retrieved and an email with the results has been sent to the specified recipients at Microsoft. \n",
+      "Assistant: The email with the requested summary and the list of closing stock prices has been sent to alemor@microsoft.com. If there is anything more I can assist you with, please let me know!\n",
+      "User: For the following article: \n",
       "\n",
-      "Here are the prices for your reference:\n",
-      "- Microsoft (MSFT): $388.47\n",
-      "- NVIDIA (NVDA): $547.10\n",
+      "Article: Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.\n",
       "\n",
-      "If you need any further assistance, please let me know!\n",
-      "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA? Please send an email to: alemor@microsoft.com, vsantana@microsoft.com, andres.padilla@microsoft.com, andredewes@microsoft.com with the results.\n",
-      "ThreadDeleted(id='thread_paUBDKooChXJM187Bjh1V1f1', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_HVlo2U1RjNHJQVK8XWs7zFgZ', deleted=True, object='assistant.deleted')\n"
+      "The stock market rally had a strong rebound this past week after the major indexes and many leading stocks retreated to start 2024 but soon found support at key levels. A large number of stocks flashed buy signals, including a powerful breakout from Nvidia (NVDA).\n",
+      "\n",
+      "It's been a good time to add exposure.\n",
+      "\n",
+      "Nvidia stock is now extended, but fellow AI leader Microsoft (MSFT) is just above a buy point after solid weekly gains, on the cusp of surpassing the market cap of fellow Dow giant Apple (AAPL). Novo Nordisk (NVO) remains in a buy zone.\n",
+      "\n",
+      "MercadoLibre (MELI) and Tradeweb Markets (TW) flashed entries intraday.\n",
+      "\n",
+      "On the downside, Tesla (TSLA) had an ugly week, extending a recent sell-off and breaking key support levels amid a flurry of headlines.\n",
+      "\n",
+      "Nvidia and NVO stock are on IBD Leaderboard. MELI stock, Nvidia and Microsoft are on SwingTrader. MSFT stock is on IBD Long-Term Leaders. Nvidia stock, MercadoLibre, Novo Nordisk and Microsoft are on the IBD 50. Microsoft, Nvidia and MercadoLibre stock are on the IBD Big Cap 20.\n",
+      "\n",
+      "\n",
+      "Email a summary of the article in simple HTML format and include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.Use only the provide text.\n",
+      "ThreadDeleted(id='thread_xREVxAFMyuaXl8z2Msq1vmgD', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_gaGpkHX8M9YrFRUkhosqvpMH', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
