--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retreive the latest stock price using Yahoo Finance"
+    "### Get the latest stock price by ticker symbol using Yahoo Finance"
    ]
   },
   {
@@ -54,13 +54,27 @@
     "def get_stock_price(symbol: str) -> float:\n",
     "    stock = yf.Ticker(symbol)\n",
     "    price = stock.history(period=\"1d\")['Close'].iloc[-1]    \n",
-    "    return price\n",
-    "\n",
+    "    return price\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use a Logic App HTTP POST trigger to email using Outlook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def send_post_request(json_payload):\n",
     "    headers = {'Content-Type': 'application/json'}\n",
     "    response = requests.post(framework.email_URI, json=json_payload, headers=headers)\n",
     "    if response.status_code == 202:\n",
-    "        print(\"Email sent to: \" + json_payload['to'])    \n"
+    "        print(\"Email sent to: \" + json_payload['to'])  "
    ]
   },
   {
