Added localized current date and time.

--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_gaGpkHX8M9YrFRUkhosqvpMH 4\n"
+      "Added assistant:  asst_PVeWX15ci4dQJaDNrEEMAlx7 1\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +198,15 @@
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
     "    content=\"For the following article: \\n\\nArticle: \"\"\"\"\"\"\" + article + \"\\n\"\"\"\"\"\"\" +\n",
-    "    \"\\n\\nEmail a summary of the article in simple HTML format and include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.\" +\n",
+    "    \"\\n\\nEmail a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.\" +\n",
     "    \"Use only the provide text.\"\n",
     ")\n",
     "\n",
     "# Step 4: Run the Assistant\n",
     "run = client.beta.threads.runs.create(\n",
     "    thread_id=thread.id,\n",
-    "    assistant_id=stock_assistant.id\n",
+    "    assistant_id=stock_assistant.id,\n",
+    "    instructions=\"Today's date and time is: \" + framework.get_localized_datetime() + \".\\n\\n\"\n",
     ")\n",
     "\n",
     "#print(run.model_dump_json(indent=4))"
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +231,8 @@
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_SSfQiU7RML5MBHuu2RXafWcB', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_E76KIWXsxjh3nxXT34SUS7Zh', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_bOTmiuaQ0MKgT5UPThdPefgg', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_bVJ7HvPQLmOO0OZ2vhvPqJqg', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_db4EJeQoDwg7rEnc1MGyFa1n', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_R1211nqvf9uuZzXny9l4cBGN', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_S3qxMR92wKdaeOg2O51CJaP6', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_NZZmqq3vy2kNLD0nxXVj56PG', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_L7ZjL7l44Ss9xw5O0fSAz3he', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_dn8TGQOpr1zG7uRdZaOrs6xK', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_08ufucLncSGySFXDEGtvzrOP', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_fXlE0wHuLMrZaXngHMP0ynkY', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_TaTo5BWEPCpEdhezaEwTYhzC', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_kjeh3poyrVhhxscgEoFQiwD6', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
@@ -244,12 +243,12 @@
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_7XPK5HO4ND1GqVnfG71T6ehh', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n<title>Market Summary</title>\\\\n<style>\\\\nbody { font-family: Arial, sans-serif; }\\\\nh2 { color: #4F8A10; }\\\\nul { list-style-type: none; }\\\\nli { margin: 5px 0; }\\\\n</style>\\\\n</head>\\\\n<body>\\\\n<h2>Stock Market Summary</h2>\\\\n<p>The stock market rally experienced a strong rebound this past week. Major indexes and many leading stocks recovered from early 2024 losses, finding support at key levels. Numerous stocks presented buy signals, with Nvidia (NVDA) showing a significant breakout.</p>\\\\n<p>While Nvidia stock is currently extended, Microsoft (MSFT) remains just above a buy point after a week of strong gains, challenging Apple\\'s (AAPL) market cap. Novo Nordisk (NVO) is still inside a buy zone, whereas MercadoLibre (MELI) and Tradeweb Markets (TW) indicated intraday entry points.</p>\\\\n<p>Conversely, Tesla (TSLA) had a poor performance, continuing its recent downward trajectory and breaching crucial supports amidst a series of notable news.</p>\\\\n<p>Nvidia and NVO are featured on IBD Leaderboard, with MELI stock, Nvidia, and Microsoft on SwingTrader. Moreover, MSFT is part of the IBD Long-Term Leaders, and along with Nvidia, MercadoLibre, Novo Nordisk, and Microsoft, is also included in the IBD 50. Microsoft, Nvidia, and MercadoLibre form part of the IBD Big Cap 20 list.</p>\\\\n<h3>Closing Prices:</h3>\\\\n<ul>\\\\n<li>Nvidia (NVDA): $547.10</li>\\\\n<li>Microsoft (MSFT): $388.47</li>\\\\n<li>Apple (AAPL): $185.92</li>\\\\n<li>Novo Nordisk (NVO): $107.16</li>\\\\n<li>MercadoLibre (MELI): $1658.58</li>\\\\n<li>Tradeweb Markets (TW): $95.91</li>\\\\n<li>Tesla (TSLA): $218.89</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_7JPSQDspkDFtGFDtArR0E79U', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<h1>Market Rally Summary</h1>\\\\r\\\\n<p>Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.</p>\\\\r\\\\n<p>The stock market rally had a strong rebound this past week, with a good time to add exposure noticed. Several stocks flashed buy signals, including a breakout from Nvidia (NVDA), while Microsoft (MSFT) is just above a buy point. Novo Nordisk (NVO) remains in a buy zone, with MercadoLibre (MELI) and Tradeweb Markets (TW) showing entries intraday.</p>\\\\r\\\\n<p>Tesla (TSLA), on the other hand, had a notably bad week, breaking key support levels amid negative headlines.</p>\\\\r\\\\n<h2>Closing Prices:</h2>\\\\r\\\\n<ul>\\\\r\\\\n  <li>Nvidia (NVDA): $547.10</li>\\\\r\\\\n  <li>Microsoft (MSFT): $388.47</li>\\\\r\\\\n  <li>Apple (AAPL): $185.92</li>\\\\r\\\\n  <li>Novo Nordisk (NVO): $107.16</li>\\\\r\\\\n  <li>MercadoLibre (MELI): $1658.58</li>\\\\r\\\\n  <li>Tradeweb Markets (TW): $95.91</li>\\\\r\\\\n  <li>Tesla (TSLA): $218.89</li>\\\\r\\\\n</ul>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
       "Email sent to: alemor@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: The email with the requested summary and the list of closing stock prices has been sent to alemor@microsoft.com. If there is anything more I can assist you with, please let me know!\n",
+      "Assistant: The summary of the market rally article, along with the closing prices of the mentioned stocks, has been sent in a simple HTML format to alemor@microsoft.com.\n",
       "User: For the following article: \n",
       "\n",
       "Article: Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.\n",
@@ -268,8 +267,8 @@
       "\n",
       "\n",
       "Email a summary of the article in simple HTML format and include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.Use only the provide text.\n",
-      "ThreadDeleted(id='thread_xREVxAFMyuaXl8z2Msq1vmgD', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_gaGpkHX8M9YrFRUkhosqvpMH', deleted=True, object='assistant.deleted')\n"
+      "ThreadDeleted(id='thread_Kg9Ho3fRZ6VBJiWMR1zTl5rV', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_PVeWX15ci4dQJaDNrEEMAlx7', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
