Cleaned up KR scenario and still failing.

--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_PVeWX15ci4dQJaDNrEEMAlx7 1\n"
+      "Added assistant:  asst_fddg8Yp7lkGhCqkRQEgoOPDP 2\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -232,23 +232,19 @@
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_NZZmqq3vy2kNLD0nxXVj56PG', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_L7ZjL7l44Ss9xw5O0fSAz3he', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_dn8TGQOpr1zG7uRdZaOrs6xK', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_08ufucLncSGySFXDEGtvzrOP', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_fXlE0wHuLMrZaXngHMP0ynkY', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_TaTo5BWEPCpEdhezaEwTYhzC', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_kjeh3poyrVhhxscgEoFQiwD6', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_HypMXVlw2l0rpHBJzwDGcpWo', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_CWkkouXs7KIVaY2Cn1CK41U9', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_Ox82T06Af3OgwlPisslQdHOk', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_CKeows4L0OXDuOJLQqgq4YhM', 'function': {'arguments': '{\"symbol\": \"NVO\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_1vfe54CjW7e5ErbKMZTBykmP', 'function': {'arguments': '{\"symbol\": \"MELI\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_qK44xMZnbVmpplTt2zlgLDEN', 'function': {'arguments': '{\"symbol\": \"TW\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_sSbjQmmDIfBvBtYDSDUFj7Jd', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
-      "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Waiting for the Assistant to process...\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_7JPSQDspkDFtGFDtArR0E79U', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<h1>Market Rally Summary</h1>\\\\r\\\\n<p>Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.</p>\\\\r\\\\n<p>The stock market rally had a strong rebound this past week, with a good time to add exposure noticed. Several stocks flashed buy signals, including a breakout from Nvidia (NVDA), while Microsoft (MSFT) is just above a buy point. Novo Nordisk (NVO) remains in a buy zone, with MercadoLibre (MELI) and Tradeweb Markets (TW) showing entries intraday.</p>\\\\r\\\\n<p>Tesla (TSLA), on the other hand, had a notably bad week, breaking key support levels amid negative headlines.</p>\\\\r\\\\n<h2>Closing Prices:</h2>\\\\r\\\\n<ul>\\\\r\\\\n  <li>Nvidia (NVDA): $547.10</li>\\\\r\\\\n  <li>Microsoft (MSFT): $388.47</li>\\\\r\\\\n  <li>Apple (AAPL): $185.92</li>\\\\r\\\\n  <li>Novo Nordisk (NVO): $107.16</li>\\\\r\\\\n  <li>MercadoLibre (MELI): $1658.58</li>\\\\r\\\\n  <li>Tradeweb Markets (TW): $95.91</li>\\\\r\\\\n  <li>Tesla (TSLA): $218.89</li>\\\\r\\\\n</ul>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_VbWCIhnneuNhtpfEW1c5YP8G', 'function': {'arguments': '{\\n  \"to\": \"alemor@microsoft.com\",\\n  \"content\": \"<html>\\\\n<head>\\\\n<title>Market Update</title>\\\\n</head>\\\\n<body>\\\\n<h1>Stock Market Summary</h1>\\\\n<p>Date: January 13, 2024</p>\\\\n<p>The stock market experienced a strong rebound this week with many stocks showing buy signals, notably Nvidia. Microsoft is hovering just above a buy point, threatening Apple\\'s market cap position. Novo Nordisk remains in the buy zone, while MercadoLibre and Tradeweb Markets indicated intraday entries. Despite the upside, Tesla continued its sell-off, breaking support levels.</p>\\\\n<h2>Closing Prices</h2>\\\\n<ul>\\\\n<li>Nvidia (NVDA): $547.10</li>\\\\n<li>Microsoft (MSFT): $388.47</li>\\\\n<li>Apple (AAPL): $185.92</li>\\\\n<li>Novo Nordisk (NVO): $107.16</li>\\\\n<li>MercadoLibre (MELI): $1658.58</li>\\\\n<li>Tradeweb Markets (TW): $95.91</li>\\\\n<li>Tesla (TSLA): $218.89</li>\\\\n</ul>\\\\n</body>\\\\n</html>\"\\n}', 'name': 'send_email'}, 'type': 'function'}]}\n",
       "Sending email...\n",
       "Email sent to: alemor@microsoft.com\n",
       "Submitting outputs back to the Assistant...\n",
       "Waiting for the Assistant to process...\n",
-      "Assistant: The summary of the market rally article, along with the closing prices of the mentioned stocks, has been sent in a simple HTML format to alemor@microsoft.com.\n",
+      "Assistant: The email with the summary of the stock market article and today's closing prices for the mentioned stocks has been sent to alemor@microsoft.com.\n",
       "User: For the following article: \n",
       "\n",
       "Article: Dow Jones futures will open Sunday evening, along with S&P 500 futures and Nasdaq futures.\n",
@@ -266,9 +262,9 @@
       "Nvidia and NVO stock are on IBD Leaderboard. MELI stock, Nvidia and Microsoft are on SwingTrader. MSFT stock is on IBD Long-Term Leaders. Nvidia stock, MercadoLibre, Novo Nordisk and Microsoft are on the IBD 50. Microsoft, Nvidia and MercadoLibre stock are on the IBD Big Cap 20.\n",
       "\n",
       "\n",
-      "Email a summary of the article in simple HTML format and include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.Use only the provide text.\n",
-      "ThreadDeleted(id='thread_Kg9Ho3fRZ6VBJiWMR1zTl5rV', deleted=True, object='thread.deleted')\n",
-      "AssistantDeleted(id='asst_PVeWX15ci4dQJaDNrEEMAlx7', deleted=True, object='assistant.deleted')\n"
+      "Email a summary of the article in simple HTML format, include today's date, include a list of the closing prices of the stocks mentioned in the article to: alemor@microsoft.com.Use only the provide text.\n",
+      "ThreadDeleted(id='thread_6c24ogOlTVQI2Mkvwlwlu6tw', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_fddg8Yp7lkGhCqkRQEgoOPDP', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
