--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def send_post_request(json_payload):\n",
+    "def send_email(json_payload):\n",
     "    headers = {'Content-Type': 'application/json'}\n",
     "    response = requests.post(framework.email_URI, json=json_payload, headers=headers)\n",
     "    if response.status_code == 202:\n",
@@ -317,7 +317,7 @@
     "                print(\"Sending email...\")\n",
     "                email_to = arguments['to']\n",
     "                email_content = arguments['content']\n",
-    "                send_post_request({'to': email_to,'content':email_content})\n",
+    "                send_email({'to': email_to,'content':email_content})\n",
     "                \n",
     "                tool_outputs.append({\n",
     "                    \"tool_call_id\": action['id'],\n",
